# minGPT-jax

./: README.md  pyproject.toml  requirements.txt
minGPT-jax/: train.py
