[tool.poetry]
name = "minGPT-jax"
version = "0.1.0"
description = ""
authors = ["bradspade <brad@spade.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.11"
jax = "^0.7.1"
flax = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
